fixed some nav alignment, updated favicon

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -21,9 +21,17 @@ nav li {
   display: inline-block;
   padding: 26px 0;
   width: 25%;
-  text-align: center;
+  /* text-align: center; */
 }
 
 ul {
-  padding-left: 0px;
+  /* padding-left: 0px; */
+  display: flex;
+  align-items: center;
+}
+
+@media only screen and (max-width: 750px) {
+  #cur-sco, #top-sco {
+    font-size: 2rem;
+  }
 }
