--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -4,4 +4,6 @@
   font-size: 2rem;
   color: #444;
   margin-bottom: 50px;
+  padding-left: 3%;
+  padding-right: 3%;  
 }
